# influxdb-gui

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/adr/: 0001-tauri-over-electron.md  0002-auto-limit-and-hard-cap.md  0003-capability-detection.md
docs/agents/: domain.md  issue-tracker.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capabilities.rs  commands.rs  error.rs  influx.rs  lib.rs  models.rs  registry.rs
src/components/connections/: connection-form.tsx
src/components/error-log/: error-log-panel.tsx
src/components/object-tree/: object-tree.tsx
src/components/query/: codemirror-editor.tsx  query-editor.tsx  result-grid.tsx
src/components/ui/: button.tsx
src/hooks/: use-shortcuts.ts
src/lib/: execution-scope.test.ts  execution-scope.ts  export.test.ts  export.ts  greet.test.ts  greet.ts  statement-classify.test.ts  statement-classify.ts  time-format.test.ts  time-format.ts  types.ts
src/stores/: connection-store.test.ts  connection-store.ts  error-log-store.test.ts  error-log-store.ts  layout-store.ts  metadata-store.ts  query-store.ts  secret-store.ts  theme-store.test.ts  theme-store.ts
