[package]
name = "influxdb-gui"
version = "0.1.0"
description = "A modern desktop GUI for InfluxDB 1.x"
authors = ["coolmentha"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"

[dev-dependencies]
wiremock = "0.6"
